[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synth-pred"
version = "0.1.0"
description = "ML-powered synthesizability prediction for AI-generated molecules"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = [
  "cheminformatics", "drug-discovery", "synthesizability",
  "machine-learning", "retrosynthesis", "rdkit"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "rdkit>=2023.03",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
]

[project.optional-dependencies]
gnn = [
  "torch>=2.0",
  "torch-geometric>=2.3",
]
viz = [
  "Pillow>=10.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]
app = [
  "streamlit>=1.28",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "pre-commit>=3.5",
]
all = [
  "synth-pred[gnn,viz,app,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/synth-pred"
"Bug Tracker" = "https://github.com/yourusername/synth-pred/issues"
Documentation = "https://github.com/yourusername/synth-pred#readme"

[project.scripts]
synth-pred = "synth_pred.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
